# nes-emulator

./: Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
src/: cli.rs  lib.rs  main.rs
src/cpu/: addressing_mode.rs  error.rs  exec.rs  mod.rs  operation.rs  registers.rs
src/cpu/operation/: addressing_mode.rs  mod.rs  parse.rs
src/memory/: constant.rs  mod.rs
