[package]
name = "emulators"
version = "0.1.0"
authors = ["Edward Jones <mail@erj4.uk>"]
edition = "2021"

[lib]
name = "emulators"
path = "src/lib.rs"

[[bin]]
name = "nes_emulator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = { version = "3.1", features = ["derive", "env"] }
env_logger = "0.9.0"
evalexpr = "6.6.0"
log = "0.4.14"
structopt = "0.3.25"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]
