[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Edward Jones <mail@erj4.uk>"]
edition = "2021"

[[bin]]
name = "nes-emulator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.1", features = ["derive", "env"] }
env_logger = "0.9"
evalexpr = "7.2"
log = "0.4"
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
test-case = "2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]
